[package]
name = "yara-x-parser"
description = """
A parsing library for YARA rules.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# Add functions that allows printing ASTs and CSTs as ASCII trees.
ascii-tree = ["ascii_tree"]

# Configuration for docs.rs.
[package.metadata.docs.rs]
# While generating the documentation for doc.rs all features are enabled
all-features = true
# Pass "docsrs" config to rustdoc while generating documentation for doc.rs
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
annotate-snippets = { workspace = true }
ascii_tree = { workspace = true, optional = true }
base64 = { workspace = true }
bitmask = { workspace = true }
bstr = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }
yara-x-macros = { workspace = true }

[dev-dependencies]
indenter = { workspace = true, features = ["std"] }
pretty_assertions = { workspace = true }
yaml-rust = { workspace = true }
