[package]
name = "yara-x-parser"
description = """
A parsing library for YARA rules.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
# Enables debug logs.
logging = ["dep:log"]

# Configuration for docs.rs.
[package.metadata.docs.rs]
# While generating the documentation for doc.rs all features are enabled
all-features = true
# Pass "docsrs" config to rustdoc while generating documentation for doc.rs
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ascii_tree = { workspace = true }
bitmask = { workspace = true }
bstr = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, optional = true }
num-traits = { workspace = true }
rustc-hash = { workspace = true }
yansi = { workspace = true }


logos = "0.14.0"
rowan = "0.15.15"

[dev-dependencies]
env_logger = { workspace = true, features = ["auto-color"] }
globwalk = { workspace = true }
goldenfile = { workspace = true }
pretty_assertions = { workspace = true }
rayon = { workspace = true }
