[package]
name = "yara-x-proto-json"
description = """
Library the converts protocol buffers into JSON.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
protobuf = { workspace = true }
itertools = { workspace = true }
yansi = { workspace = true }
yara-x-proto = { workspace = true }

[dev-dependencies]
goldenfile = { workspace = true }
globwalk = { workspace = true }
protobuf = { workspace = true }

[build-dependencies]
protobuf = { workspace = true }
protobuf-codegen = { workspace = true }
