[package]
name = "yara-x-proto"
description = """
Protocol buffer with options for YARA modules.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
protobuf = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
goldenfile = { workspace = true }
globwalk = { workspace = true }

[build-dependencies]
protobuf =  { workspace = true }
protobuf-codegen =  { workspace = true }