[package]
name = "yara-x-py"
description = """
Python bindings for YARA-X library.
"""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yara_x"
doc = false
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
protobuf = { workspace = true }
pyo3 = { version = "0.25.1", features = [
    "abi3",
    "abi3-py38",
    "extension-module",
] }
pyo3-file = "0.13.0"
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
yara-x = { workspace = true, features = ["parallel-compilation"] }
yara-x-proto-json = { workspace = true }
yara-x-fmt = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.25.1"
