[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yara-x"
description = "Python bindings for YARA-X"
requires-python = ">=3.8"
readme = { file = "../README.md" }
license = { file = "../LICENSE" }
keywords = ["pattern-matching", "cybersecurity", "forensics", "malware", "yara"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: BSD License",
]


[tool.maturin]
features = ["pyo3/extension-module"]
