[package]
name = "yara-x-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true

[[bin]]
name = "yr"
path = "src/main.rs"

[features]
# When this feature is enabled the CLI program saves CPU profiling
# information into a flamegraph.svg file when run.
profiling = ["pprof"]

[dependencies]
ascii_tree = { workspace = true }
ansi_term = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
yansi = { workspace = true }
yara-x = { workspace = true }
yara-x-parser = { workspace = true, features = ["ascii-tree"]}
yara-x-fmt = { workspace = true }

clap = { version = "4.0.32", features=["cargo"] }
enable-ansi-support = "0.2.1"
pprof = { version = "0.11", features = ["flamegraph"], optional=true }
walkdir = "2.3.2"
