[package]
name = "yara-x-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "yr"
path = "src/main.rs"

[features]
# When this feature is enabled the CLI program saves CPU profiling
# information into a flamegraph.svg file when run.
profiling = ["pprof"]

# When this feature is enabled the CLI program prints debug logs if
# the RUST_LOG environment variable is set to any of the debug levels:
#
#   error
#   warn
#   info
#   debug
#   trace
#
# Example: RUST_LOG=info ./yr scan some_rule.yar some_file
logging = ["dep:log", "dep:env_logger"]


[dependencies]
ascii_tree = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features=["cargo"] }
enable-ansi-support = { workspace = true }
env_logger = { workspace = true , optional = true }
globset = { workspace = true }
log = { workspace = true, optional = true }
yansi = { workspace = true }
yara-x = { workspace = true }
yara-x-parser = { workspace = true, features = ["ascii-tree"] }
yara-x-fmt = { workspace = true }

crossbeam = "0.8.2"
crossterm = "0.26.1"
pprof = { version = "0.12.1", features = ["flamegraph"], optional=true }
superconsole = "0.2.0"
walkdir = "2.3.2"
wild = "2.1.0"
