[package]
name = "yara-x-dump"
version = "0.1.0"
description = "A YARA module for dumping file information"
authors = ["Tomas Duris <Tomas.Duris@gendigital.com>"]
edition = "2021"
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
yara-x-proto = { workspace = true }
protobuf = { workspace = true }
yansi = { workspace = true }

serde_json = { version = "1.0.1", features = ["preserve_order"] }
serde_yaml = "0.8.26" 
toml = "0.8.4"
protobuf-json-mapping = "3.3.0"
protobuf-support = "3.3.0"
xml2json-rs = "1.0.1"
chrono = "0.4.31"

[dev-dependencies]
goldenfile = "1.5.2"
ihex = "3.0.0"
globwalk = { workspace = true }
tempfile = "3.8.1"
rstest = "0.18.2"
