[package]
name = "yara-x-dump"
version = "0.1.0"
description = "A YARA module for dumping file information"
authors = ["Tomas Duris <Tomas.Duris@gendigital.com>"]
edition = "2021"
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
protobuf = { workspace = true }
yansi = { workspace = true }

protobuf-support = "3.3.0"
chrono = "0.4.31"

[dev-dependencies]
goldenfile = "1.5.2"
globwalk = { workspace = true }
tempfile = "3.8.1"

[build-dependencies]
protobuf =  { workspace = true }
protobuf-codegen =  { workspace = true }
protobuf-parse =  { workspace = true }