[package]
name = "yara-x-fmt"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitmask =  { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
yara-x-parser = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
yaml-rust = { workspace = true }