[package]
name = "yara-x-fmt"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
bitmask =  { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
yara-x-parser = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }