[package]
name = "yara-x-macros"
edition.workspace = true
version.workspace = true

[lib]
name = "yara_x_macros"
proc-macro = true

[dependencies]
darling = "0.14.2"
syn = {version = "1.0", features = ["full", "derive", "parsing", "visit"]}
quote = "1.0"
proc-macro2 = "1.0.43"
convert_case = "0.6.0"
