[package]
name = "yara-x-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true

[features]
# Add functions that allows printing ASTs and CSTs as ASCII trees.
ascii-tree = ["ascii_tree"]

# Configuration for docs.rs.
[package.metadata.docs.rs]
# While generating the documentation for doc.rs all features are enabled
all-features = true
# Pass "docsrs" config to rustdoc while generating documentation for doc.rs
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }
ascii_tree = { workspace = true, optional=true }
base64 = { workspace = true }
bitmask =  { workspace = true }
bstr = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
line-span = { workspace = true }
num = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
protobuf = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
walrus = { workspace = true }
yansi = { workspace = true }
yara-x-macros = { workspace = true }
yara-x-proto = { workspace = true }

[dev-dependencies]
indenter = { workspace = true, features=["std"] }
pretty_assertions = { workspace = true }
yaml-rust = { workspace = true }
